# pycon-uganda

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  dev.requirements.txt  package-lock.json  package.json  pyproject.toml  seeder.py  test.py  update_2026_templates.py
about/: models.py
cms/: models.py  views.py
coc/: models.py
community/: url.py  views.py
conference_schedule/: models.py  views.py
faq/: models.py
fin_aid/: models.py
health_safety_guideline/: models.py
home/: models.py  views.py
privacypolicy/: models.py
pycon2025/: apps.py  urls.py  views.py
pycon2026/: apps.py  urls.py  views.py
pyconafrica/: middleware.py  settings.py  urls.py
registration/: models.py
schedule/: urls.py  views.py
speakers/: views.py
sponsor_us/: models.py  views.py
sponsors/: models.py  views.py
static/css/: main.css
static/fav/: site.webmanifest
talks/: forms.py  models.py  signals.py  views.py
talks/templatetags/: talks_tags.py
templates/: 404.html  base.html  tem-nav.html
templates/2019/: base19.html
templates/2020/: base.html  eporting.html  footer.html  guidelines.html  hopin.html  keynote_detail.html  sample.html
templates/2024/: base.html  footer.html  navbar.html
templates/2025/: base.html  footer.html  navbar.html
templates/2026/: base.html  footer.html  navbar.html
templates/avatar/: add.html  base.html  change.html  confirm_delete.html
templates/home/: home.html
templates/profiles/: create_profile.html  home.html  login_details.html  (+4 more)
tickets/: models.py  views.py
travel_guide/: apps.py  urls.py  views.py
(+227 files in other folders)
