[project]
name = "pycon-africa"
version = "0.1.0"
description = ""
authors = []
requires-python = "==3.11.*"
readme = "README.md"
dependencies = [
    "django>=5.0.3,<6",
    "cloudinary>=1.39.1,<2",
    "django-grappelli>=3.0.8,<4",
    "django-cloudinary-storage>=0.3.0,<0.4",
    "django-gamma-cloudinary>=0.2.3,<0.3",
    "django-avatar>=8.0.0,<9",
    "django-crispy-forms~=2.1",
    "crispy-bootstrap5~=2024.2",
    "crispy-tailwind>=1.0.3",
    "django-recaptcha>=4.0.0,<5",
    "django-slugify-processor>=1.6.0,<2",
    "django-countries~=7.6",
    "django-summernote>=0.8.20.0,<0.9",
    "django-extensions>=3.2.3,<4",
    "django-robohash-svg>=0.9.5,<0.10",
    "django-embed-video>=1.4.9,<2",
    "django-imagekit>=5.0.0,<6",
    "django-import-export>=3.3.7,<4",
    "djangorestframework>=3.15.1,<4",
    "django-tinymce>=4.0.0,<5",
    "sorl-thumbnail>=12.10.0,<13",
    "django-markdownx>=4.0.7,<5",
    "django-hitcount>=1.3.5,<2",
    "django-taggit>=5.0.1,<6",
    "django-thumbs-v2>=0.4.1,<0.5",
    "django-simple-history>=3.5.0,<4",
    "hashids>=1.3.1,<2",
    "django-hashid-field>=3.4.0,<4",
    "django-next-prev>=1.1.0,<2",
    "pytz~=2024.1",
    "dotenv>=0.9.9",
    "setuptools>=80.9.0",
    "whitenoise>=6.9.0",
    "django-debug-toolbar>=6.0.0",
]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
